--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ repositories {
 	maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
-ext.junitJupiterVersion = '5.3.2'
-ext.jqwikVersion = '1.1.0-SNAPSHOT'
+ext.junitJupiterVersion = '5.4.0'
+ext.jqwikVersion = '1.1.0'
 
 apply plugin: 'java'
 
@@ -29,18 +29,16 @@ test {
 dependencies {
 
   // jqwik is in compile classpath because it's extended here
-	compile "net.jqwik:jqwik:${jqwikVersion}"
-	runtime "net.jqwik:jqwik-engine:${jqwikVersion}"
+	implementation "net.jqwik:jqwik:${jqwikVersion}"
 
-	testCompile("org.mockito:mockito-core:2.23.4")
-	testCompile("org.assertj:assertj-core:3.9.1")
+	testImplementation("org.mockito:mockito-core:2.23.4")
+	testImplementation("org.assertj:assertj-core:3.9.1")
 
-	testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
-	testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
+	testImplementation("org.junit.jupiter:junit-jupiter:${junitJupiterVersion}")
 
 }
 
 wrapper {
 	description = 'Generates gradlew[.bat] scripts'
-	gradleVersion = '5.1.1'
+	gradleVersion = '5.2.1'
 }
