--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,14 @@ dependencies {
 
   // jqwik is in compile classpath because it's extended here
 	implementation "net.jqwik:jqwik:${jqwikVersion}"
+	implementation "org.checkerframework:checker-qual:2.6.0"
 
 	testImplementation("org.mockito:mockito-core:2.23.4")
 	testImplementation("org.assertj:assertj-core:3.9.1")
 
 	testImplementation("org.junit.jupiter:junit-jupiter:${junitJupiterVersion}")
 
+	implementation 'org.jetbrains:annotations:15.0'
 }
 
 wrapper {
