--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ repositories {
 }
 
 ext.junitJupiterVersion = '5.4.0'
-ext.jqwikVersion = '1.1.0'
+ext.jqwikVersion = '1.1.1-SNAPSHOT'
 
 apply plugin: 'java'
 
