--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ test {
 	include '**/*Properties.class'
 	include '**/*Test.class'
 	include '**/*Tests.class'
-	//	include '**/*Examples.class'
+	include '**/*Contract.class'
 
 	// events = ["passed", "failed", "skipped"]
 	// testLogging.showStandardStreams = true
